[package]
name = "bevytest"
version = "0.1.0"
authors = ["Jack Vine <jackv949@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "213ba9629a27084f40e1d1cefab49d2819cf1f0b" }